# lualib_cmake

./: .gitignore  CMakeLists.txt
install/lib/: testmod.lib
src/: CMakeLists.txt  lua_utils.cpp  lua_utils.hpp  platform.hpp
src/demos/: CMakeLists.txt  config03.lua  demo01.c  demo02.c  demo03.c
src/lua/: CMakeLists.txt
src/testmod/: CMakeLists.txt  ltestmod.cpp
